Added dummy colors

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+
+@theme {
+    --color-paper: #224;
+    --color-ink: #456;
+    --color-stone: #dfd;
+    --color-gem: #e6d;
+}
