--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,5 @@ import Layout from '@/layouts/Layout.astro';
 ---
 
 <Layout title='Home'>
-    <h1>Home</h1>
+    <h1 class="bg-paper text-ink">Home</h1>
 </Layout>
