--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2,7 +2,7 @@
 
 @theme {
     --color-paper: #224;
-    --color-ink: #456;
-    --color-stone: #dfd;
+    --color-ink: #dfd;
+    --color-stone: #456;
     --color-gem: #e6d;
 }
