--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,9 @@ import Layout from '@/layouts/Layout.astro';
 ---
 
 <Layout title='Home'>
-    <h1 class="bg-paper text-ink">Home</h1>
+    <main class="container px-4 mx-auto">
+        <h1 class="text-6xl font-bold">Home</h1>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem saepe, aliquam mollitia doloribus, ducimus error natus possimus magni incidunt expedita sed! Vero dolore, obcaecati molestiae doloremque suscipit nam optio vel?</p>
+    </main>
 </Layout>
