--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,5 +7,9 @@ import Layout from '@/layouts/Layout.astro';
         <h1 class="text-6xl font-bold">Home</h1>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem saepe, aliquam mollitia doloribus, ducimus error natus possimus magni incidunt expedita sed! Vero dolore, obcaecati molestiae doloremque suscipit nam optio vel?</p>
+
+        <p class="text-stone">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem saepe, aliquam mollitia doloribus, ducimus error natus possimus magni incidunt expedita sed! Vero dolore, obcaecati molestiae doloremque suscipit nam optio vel?</p>
+
+        <p class="text-gem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem saepe, aliquam mollitia doloribus, ducimus error natus possimus magni incidunt expedita sed! Vero dolore, obcaecati molestiae doloremque suscipit nam optio vel?</p>
     </main>
 </Layout>
