updated home page contents

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ const { title } = Astro.props
 		<title>{title}</title>
 	</head>
 
-	<body class="min-h-screen bg-paper text-ink grid grid-rows-[auto] items-center">
+	<body class="min-h-screen bg-paper text-ink grid grid-rows-[auto] items-center text-[110%] leading-relaxed">
 		<slot />
 	</body>
 </html>
