--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,14 @@
 import Layout from '@/layouts/Layout.astro';
 ---
 
-<Layout title='Home'>
-    <main class="container px-4 mx-auto">
-        <h1 class="text-6xl font-bold">Home</h1>
+<Layout title="">
+    <main class="container px-8 mx-auto">
+        <h1 class="text-6xl font-bold mb-4 text-gem">small-lang</h1>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem saepe, aliquam mollitia doloribus, ducimus error natus possimus magni incidunt expedita sed! Vero dolore, obcaecati molestiae doloremque suscipit nam optio vel?</p>
+        <p class="my-4 italic">
+            lang by <a href="https://github.com/descenacre">descenacre</a><br/>
+            website code by <a href="https://mathie.gay/">mathie</a>
+        </p>
 
-        <p class="text-stone">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem saepe, aliquam mollitia doloribus, ducimus error natus possimus magni incidunt expedita sed! Vero dolore, obcaecati molestiae doloremque suscipit nam optio vel?</p>
-
-        <p class="text-gem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem saepe, aliquam mollitia doloribus, ducimus error natus possimus magni incidunt expedita sed! Vero dolore, obcaecati molestiae doloremque suscipit nam optio vel?</p>
-    </main>
+        <p>Greetings, voyager! Here, you may find information about <span class="font-bold">small-lang</span>. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam mollitia excepturi accusamus! Asperiores nostrum unde autem tempora veritatis odit quidem consequatur, eum dolorum natus aliquam cupiditate voluptate sunt modi velit.</p>
 </Layout>
