--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2,10 +2,10 @@
 @import "tailwindcss";
 
 @theme {
-    --color-paper: #224;
-    --color-ink: #dfd;
-    --color-stone: #456;
-    --color-gem: #e6d;
+    --color-paper: #1c2434;
+    --color-ink: #dcece4;
+    --color-stone: #3c6474;
+    --color-gem: #cc9478;
 
     --default-font-family: 'Noto Serif', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --font-heading: 'Noto Serif Display';
