--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -6,6 +6,7 @@
     --color-ink: #dcece4;
     --color-stone: #3c6474;
     --color-gem: #cc9478;
+    --color-gem-shine: #ffa880;
 
     --default-font-family: 'Noto Serif', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --font-heading: 'Noto Serif Display';
