added basheste alphabet page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,12 +3,12 @@ import Layout from '@/layouts/Layout.astro';
 
 const families = [
     {
-        name: "basheste",
+        name: "Basheste",
         slug: "basheste",
         links: [
             {
                 name: "alphabet",
-                slug: "syllabary"
+                slug: "alphabet"
             },
             {
                 name: "logograms",
@@ -21,7 +21,7 @@ const families = [
         ]
     },
     {
-        name: "il'suastet",
+        name: "Il'suastet",
         slug: "il-suastet",
         links: [
             {
@@ -33,7 +33,7 @@ const families = [
 ]
 ---
 
-<Layout title="home">
+<Layout tab="Luscept languages">
     <main class="container max-w-3xl px-8 mx-auto">
         <h1 class="text-6xl font-bold mb-4 text-gem">Luscept languages</h1>
 
