--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,10 +3,10 @@ import '@/assets/css/main.css'
 import '@/assets/scss/global.scss'
 
 interface Props {
-    title: string
+	tab: string
 }
 
-const { title } = Astro.props
+const { title, tab } = Astro.props
 ---
 
 <!doctype html>
@@ -17,7 +17,7 @@ const { title } = Astro.props
 		<meta name="generator" content={Astro.generator} />
         <link rel="canonical" href={Astro.url} />
 
-		<title>{title}</title>
+		<title>{tab}</title>
 	</head>
 
 	<body class="min-h-screen bg-paper text-ink grid grid-rows-[auto] items-center text-[110%] leading-relaxed">
