--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const families = [
 
 <Layout tab="Luscept languages">
     <main class="container max-w-3xl px-8 mx-auto">
-        <h1 class="text-6xl font-bold mb-4 text-gem">Luscept languages</h1>
+        <h1 class="text-6xl font-bold mb-4">Luscept languages</h1>
 
         <p class="my-4 italic">
             contents by <a href="https://github.com/descenacre">descenacre</a><br/>
