--- a/src/components/Ariadne.astro
+++ b/src/components/Ariadne.astro
@@ -1,7 +1,7 @@
 ---
 interface Props {
 	links: {
-        url: string,
+        url?: string,
         name: string
     }[]
 }
@@ -12,7 +12,11 @@ const { links = [] } = Astro.props;
 <p class="my-2">
     {links.map((link,i,a) => (
         <span>
-            <a href={link.url}>{link.name}</a>
+            {link.url ? (
+                <a href={link.url}>{link.name}</a>
+            ):(
+                <span>{link.name}</span>
+            )}
             <span>{i < a.length-1 ? "<" : ""}</span>
         </span>
     ))}
