--- a/src/pages/basheste/alphabet/index.astro
+++ b/src/pages/basheste/alphabet/index.astro
@@ -41,6 +41,8 @@ const alphabet = [
         <h1 class="text-6xl font-bold mb-4">alphabet (Basheste)</h1>
         <Ariadne links={ariadne}/>
 
+        <p>hello world</p>
+
         <div class="max-w-4xl mt-8 grid grid-cols-6 gap-4">
             {alphabet.map(letter => (
                 <div>
