--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,8 +42,9 @@ const families = [
             website code by <a href="https://mathie.gay/">mathie</a>
         </p>
 
-        <p>greetings, voyager! here, you may find information about the <span class="font-bold">Luscept languages</span>. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam mollitia excepturi accusamus! Asperiores nostrum unde autem tempora veritatis odit quidem consequatur, eum dolorum natus aliquam cupiditate voluptate sunt modi velit.</p>
-
+        <p>Welcome to <span class="font-bold">Luscept.</span>, a world where logic, dreams, and calamity cascade into one another.</p>
+        <p>Or rather, a dance of matter, spirit, and crystal.</p>
+        
         <div class="mt-8">
             {families.map(family => (
                 <div class="my-4 family">
