--- a/src/pages/il-suastet/index.astro
+++ b/src/pages/il-suastet/index.astro
@@ -4,14 +4,14 @@ import Ariadne from '@/components/Ariadne.astro';
 
 const ariadne = [
     { name: "home", url: "/" },
-    { name: "Basheste" }
+    { name: "Il'suastet" }
 ]
 ---
 
-<Layout tab="Basheste">
+<Layout tab="Il'suastet">
     <main class="container max-w-3xl px-8 mx-auto">
 
-        <h1>Basheste</h1>
+        <h1>Il'suastet</h1>
         <Ariadne links={ariadne}/>
 
         <p class="my-4">
@@ -21,13 +21,7 @@ const ariadne = [
         <p>
             <ul class="list-disc">
                 <li class="ml-4">
-                    <a href="/basheste/alphabet">alphabet</a>
-                </li>
-                <li class="ml-4">
-                    <a href="/basheste/logograms">logograms</a>
-                </li>
-                <li class="ml-4">
-                    <a href="/basheste/logograms/radicals">logogram radicals</a>
+                    <a href="/il-suastet/syllabary">syllabary</a>
                 </li>
             </ul>
         </p>
