made glyphgrid component, created dummy data for lang2 syllabary

--- a/src/components/Ariadne.astro
+++ b/src/components/Ariadne.astro
@@ -9,7 +9,7 @@ interface Props {
 const { links = [] } = Astro.props;
 ---
 
-<p class="my-2">
+<p class="mb-8">
     {links.map((link,i,a) => (
         <span>
             {link.url ? (
