updated glyphgrid style

--- a/src/components/GlyphGrid.astro
+++ b/src/components/GlyphGrid.astro
@@ -12,7 +12,7 @@ const { glyphs } = Astro.props as Props
 <div class="max-w-4xl my-8 grid grid-cols-6 gap-4">
     {glyphs.map(glyph => (
         <div>
-            <div class="grid-item bg-paper border-2 center mx-auto aspect-square rounded-sm">
+            <div class="grid-item center mx-auto aspect-square rounded-sm">
                 <a href={glyph.url} class="block h-full w-full">
                     <div class="flex h-full">
                         <div class="glyph-container m-auto" title={glyph.title}>
@@ -29,7 +29,7 @@ const { glyphs } = Astro.props as Props
 
     .grid-item {
         color: var(--color-ink);
-        border-color: var(--color-gem);
+        background-color: color-mix(in srgb, var(--color-paper), var(--color-gem) 20%);;
         &:hover {
             background-color: var(--color-gem);
             color: var(--color-paper);
