lang2 pages backend almost done, only missing words

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -7,6 +7,7 @@
     --color-stone: #3c6474;
     --color-gem: #cc9478;
     --color-gem-shine: #ffa880;
+    --color-omen: #f08078;
 
     --default-font-family: 'Noto Serif', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --font-heading: 'Noto Serif Display';
