--- a/src/components/GlyphGrid.astro
+++ b/src/components/GlyphGrid.astro
@@ -1,12 +1,13 @@
 ---
-import Glyph from '@/components/Glyph.astro';
-import type { TypeGridGlyph } from "./TypeGridGlyph";
+import Glyph from '@/components/Glyph.astro'
+import type { TypeGridGlyph } from "./TypeGridGlyph"
 
 export interface Props {
     glyphs: TypeGridGlyph[]
+    lang: string
 }
 
-const { glyphs } = Astro.props as Props
+const { glyphs=[], lang } = Astro.props as Props
 ---
 
 <div class="max-w-4xl my-8 grid grid-cols-6 gap-4">
@@ -16,7 +17,7 @@ const { glyphs } = Astro.props as Props
                 <a href={glyph.url} class="block h-full w-full">
                     <div class="flex h-full">
                         <div class="glyph-container m-auto" title={glyph.title}>
-                            <Glyph src={glyph.src} />
+                            <Glyph lang={lang} src={glyph.src} />
                         </div>
                     </div>
                 </a>
