--- a/src/pages/il-suastet/syllabary/index.astro
+++ b/src/pages/il-suastet/syllabary/index.astro
@@ -2,7 +2,9 @@
 import Layout from '@/layouts/Layout.astro'
 import Ariadne from '@/components/Ariadne.astro'
 import GlyphGrid from '@/components/GlyphGrid.astro'
+import Section from '@/components/Section.astro'
 import type { TypeGridGlyph } from '@/components/TypeGridGlyph'
+import { Lang2Object_to_GridGlyph } from "@/types/Lang2"
 
 const ariadne = [
     { name: "home", url: "/" },
@@ -11,25 +13,13 @@ const ariadne = [
 ]
 
 import vowel_families from "./vowel-families/_vowel_families.json"
-const grid_vowel_families:TypeGridGlyph[] = vowel_families.map(vowel_family => ({
-    url: "/il-suastet/syllabary/vowel-families/"+vowel_family.slug,
-    src: "/glyph/"+vowel_family.src.img+".svg",
-    title: vowel_family.name
-}))
+const grid_vowel_families:TypeGridGlyph[] = vowel_families.map((o) => (Lang2Object_to_GridGlyph(o,"/il-suastet/syllabary/vowel-families/")))
 
 import consonant_families from "./consonant-families/_consonant_families.json"
-const grid_consonant_families:TypeGridGlyph[] = consonant_families.map(consonant_family => ({
-    url: "/il-suastet/syllabary/consonant-families/"+consonant_family.slug,
-    src: "/glyph/"+consonant_family.src.img+".svg",
-    title: consonant_family.name
-}))
+const grid_consonant_families:TypeGridGlyph[] = consonant_families.map((o) => (Lang2Object_to_GridGlyph(o,"/il-suastet/syllabary/consonant-families/")))
 
 import compounds from "./compounds/_compounds.json"
-const grid_compounds:TypeGridGlyph[] = compounds.map(grid_compound => ({
-    url: "/il-suastet/syllabary/compounds/"+grid_compound.slug,
-    src: "/glyph/"+grid_compound.src.img+".svg",
-    title: grid_compound.name
-}))
+const grid_compounds:TypeGridGlyph[] = compounds.map((o) => (Lang2Object_to_GridGlyph(o,"/il-suastet/syllabary/compounds/")))
 ---
 
 <Layout tab="syllabary < Il'suastet">
@@ -39,27 +29,17 @@ const grid_compounds:TypeGridGlyph[] = compounds.map(grid_compound => ({
         <Ariadne links={ariadne}/>
 
         <!-- consonants -->
-        <h2>consonant families</h2>
-        <hr class="border-stone border-1 mb-4">
-        <GlyphGrid glyphs={grid_consonant_families} />
+        <Section>consonant families</Section>
+        <GlyphGrid glyphs={grid_consonant_families} lang="lang2" />
 
         <!-- vowels -->
-        <h2>vowel families</h2>
-        <hr class="border-stone border-1 mb-4">
-        <GlyphGrid glyphs={grid_vowel_families} />
+        <Section>vowel families</Section>
+        <GlyphGrid glyphs={grid_vowel_families} lang="lang2" />
 
         <!-- compounds -->
-        <h2>all compounds</h2>
-        <hr class="border-stone border-1 mb-4">
-        <GlyphGrid glyphs={grid_compounds} />
+        <Section>all compounds</Section>
+        <GlyphGrid glyphs={grid_compounds} lang="lang2" />
 
 
     </main>
 </Layout>
-
-<style>
-    h2 {
-        font-weight: bold;
-        font-size: 2rem;
-    }
-</style>
