--- a/src/pages/il-suastet/syllabary/vowels/[...slug].astro
+++ b/src/pages/il-suastet/syllabary/vowels/[...slug].astro
@@ -5,34 +5,33 @@ import Glyph from "@/components/Glyph.astro"
 import Section from "@/components/Section.astro"
 import GlyphGrid from "@/components/GlyphGrid.astro"
 import type { TypeGridGlyph } from "@/components/TypeGridGlyph"
-import type { Lang2Vowel, Lang2Compound } from "@/types/Lang2"
+import type { Lang2Vowel, Lang2Mora } from "@/types/Lang2"
 import { Lang2Object_to_GridGlyph } from "@/types/Lang2"
 
-import vowel_families from "./_vowel_families.json"
+import vowels from "./_vowels.json"
 export async function getStaticPaths() {
-    return vowel_families.map((vf:Lang2Vowel) => ({
-        params: { slug: vf.slug }, props: { vf },
+    return vowels.map((vowel:Lang2Vowel) => ({
+        params: { slug: vowel.slug }, props: { vowel },
     }));
 }
-const { vf } = Astro.props;
+const { vowel } = Astro.props;
 
 const ariadne = [
     { name: "home", url: "/" },
     { name: "Il'suastet", url: "/il-suastet" },
     { name: "syllabary", url: "/il-suastet/syllabary" },
-    { name: vf.name }
+    { name: vowel.name }
 ]
 
-import compounds from "../compounds/_compounds.json"
-const valid_compounds = compounds.filter((compound:Lang2Compound) => compound.parent.vowel===vf.slug)
-const grid_compounds:TypeGridGlyph[] = valid_compounds.map((o) => (Lang2Object_to_GridGlyph(o,"/il-suastet/syllabary/compounds/")))
+import morae from "../morae/_morae.json"
+const grid_morae:TypeGridGlyph[] = morae.filter((mora:Lang2Mora) => (("vowel" in mora.parent) && mora.parent.vowel===vowel.slug)).map((o) => (Lang2Object_to_GridGlyph(o,"/il-suastet/syllabary/morae/")))
 ---
 
-<Layout tab={vf.name}>
+<Layout tab={vowel.name}>
     <main class="container max-w-xl px-8 mx-auto">
 
-        <h1>{vf.name}</h1>
-        <div class="font-heading -mt-4 mb-2 text-3xl italic">vowel family</div>
+        <h1>{vowel.name}</h1>
+        <div class="font-heading -mt-4 mb-2 text-3xl italic">vowel</div>
         <Ariadne links={ariadne}/>
 
         <div class="my-4">
@@ -40,22 +39,22 @@ const grid_compounds:TypeGridGlyph[] = valid_compounds.map((o) => (Lang2Object_t
                 <div>
                     <div class="glyph-container min-w-32 rounded-sm aspect-square h-full flex">
                         <div class="sub block m-auto">
-                            <Glyph src={vf.src.img} lang="lang2" />
+                            <Glyph src={vowel.src.img} lang="lang2" />
                         </div>
                     </div>
                 </div>
                 <div>
-                    <div>IPA consonant</div>
-                    <div class="text-4xl">[ {vf.ipa} ]</div>
+                    <div>IPA</div>
+                    <div class="text-4xl">[ {vowel.ipa} ]</div>
                     <div>romanization</div>
-                    <div class="text-4xl">{vf.roman}</div>
+                    <div class="text-4xl">{vowel.roman}</div>
                 </div>
             </div>
         </div>
         
-        {grid_compounds.length>0 && (
-            <Section>child compounds</Section>
-            <GlyphGrid glyphs={grid_compounds} lang="lang2" />
+        {grid_morae.length>0 && (
+            <Section>morae using this vowel ({grid_morae.length})</Section>
+            <GlyphGrid glyphs={grid_morae} lang="lang2" />
         )}
 
     </main>
